feat(entity-graph): add a entity graph service and endpoint